--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ body {
   background: linear-gradient(87deg, #5e72e4 0, #825ee4 100%) !important;
 }
 
+.bg-gradient-purple {
+  background: linear-gradient(87deg, #5e72e4 0, #825ee4 100%) !important;
+}
+
 .divider {
   background-image: linear-gradient(
     90deg,
