--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,44 @@ body {
   }
 }
 
+/* timeline */
+
+.timeline .timeline-step {
+  position: absolute;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  transform: translateX(-50%);
+  font-weight: 600;
+  z-index: 10000;
+
+  background-color: #a108cf;
+  padding: 5px;
+  border-radius: 50%;
+}
+.timeline::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  /* left: 1rem; */
+  height: 100%;
+  border-right: 2px solid #dee2e6;
+}
+.timeline .timeline-content {
+  position: relative;
+  margin-left: 40px;
+  padding-top: 0.35rem;
+  position: relative;
+  top: -6px;
+}
+
+.timeline .timeline-content::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 /* scrooll  */
 
 /* Tamaño del scroll */
